# cluesolver

./: .gitignore  README.md  agents.py  benchmark.py  clue.py  clueengine.py  index.html  logic.py  temp  utils.py
clueengine_rust/: Cargo.toml  HOWTO  HOWTO_TEST
clueengine_rust/benches/: simulate_fewconstraints.rs  simulate_manyconstraints.rs  simulate_manymanyconstraints.rs
clueengine_rust/src/: lib.rs
clueengine_rust/tests/: tests.rs
cluesolver/: .gitignore  HOWTO  package-lock.json  package.json
cluesolver/public/: index.html
cluesolver/src/: App.css  App.tsx
gui/: ClueSolver-compile  ClueSolver-shell
gui/src/com/gregstoll/cluesolver/: ClueSolver.gwt.xml
gui/src/com/gregstoll/cluesolver/client/: .ClueSolver.java.swp  .ClueStateWidget.java.swp  CgiHelper.java  CgiResponseHandler.java  ClueSolver.java  ClueStateWidget.java  ConfirmHandler.java  NameSuggestPanel.java
gui/src/com/gregstoll/cluesolver/public/: .ClueSolver.html.swp  ClueSolver.css  ClueSolver.html  sarissa.js  sarissa_dhtml.js  sarissa_ieemu_xpath.js
gui/src/com/gregstoll/cluesolver/public/source/: CgiHelper.java.txt  CgiResponseHandler.java.txt  ClueSolver.java.txt  ClueStateWidget.java.txt  ConfirmHandler.java.txt  NameSuggestPanel.java.txt  clue.py.txt  clueengine.py.txt  json.py.txt
gui/src/com/gwt/components/client/: NodeImpl.java  XML.java  XMLParseException.java  XSLT.java  XSLTProcessException.java
gui/src/com/gwt/components/client/xslt/: Node.java
images/: rainbow.xcf
public/: clue.cgi  clueengine.py.txt  index.html  json.py.txt  react-tabs.min.js  static
