[package]
name = "clueengine"
version = "0.1.0"
authors = ["gregstoll <greg@gregstoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
rand = "0.7"
cgi = "0.6"
json = "0.12"
url = "2.1"
rayon = "1.3"

[profile.release]
debug = true
# https://deterministic.space/high-performance-rust.html
lto = "fat"
codegen-units = 1

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simulate_fewconstraints"
harness = false

[[bench]]
name = "simulate_manyconstraints"
harness = false

[[bench]]
name = "simulate_manymanyconstraints"
harness = false
